--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <li><strong>Nacionalidad: </strong>Argentina</li>
                                 <li><strong>Lugar de morada actual: </strong>Merlo, Buenos Aires,  Argentina.</li>
                                 <li><strong>Cuenta de instagram principal: </strong>
-                                <a target="blank_" href="https://instagram.com/djezshadow">@djezshadowwwww</a></li>
+                                <a target="blank_" href="https://instagram.com/djezshadow">@djezshadow</a></li>
                                 <li><strong>Cuenta de instagram fotografia: </strong><a target="blank_" href="https://instagram.com/ph_nat_urb">@ph_nat_urb</a></li>
             
                             </ol>   
